--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,10 +37,35 @@ textarea {
 
 
 /* typography */
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
+}
 
-/* ... */
+
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom:30px;
+  text-align: center;
+  font-weight: normal;
+  color: #999;
+}
+
+p{
+  font-size:1.1em;
+  line-height: 1.7em;
+}
+
 
 /* header */
+
 #logo{ // :id => "logo" , so we use a CSS id
   float: left;
   margin-right: 10px;
@@ -52,4 +77,45 @@ textarea {
   padding-top: 9px;
   font-weight: bold;
   line-height: 1; 
+}
+
+
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+/* footer */
+
+footer{
+  margin-top:45px;
+  padding-top:5px;
+  border-top: 1px solid #eaeaea;
+  color: #999;
+
+}
+
+footer a{
+  color: #555;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small{
+  float:left;
+
+}
+
+footer ul{
+  float: right;
+  list-style: none; 
+
+}
+
+footer ul li{
+  float: left;
+  margin-left: 10px;
+
 }
