Getting rid of /static_pages in front of URL being visited && Updated layout links using named route (root_path, help_path, contact_path, etc)

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,8 +6,8 @@
         <%= link_to("sample app", '#', id: "logo") %>
         <nav>
           <ul class="pull-right nav">    
-            <li><%= link_to "Home", '#' %></li>
-            <li><%= link_to "Help", '#' %></li>
+            <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Help", help_path %></li>
             <li><%= link_to "Sign in", '#' %></li> <!-- link_to() generates
                                                     <a href='#'>Sign in</a> -->
           </ul>
