--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Contact") %>
 
-<h1>Contact</h1>
+<h1>Contacts</h1>
 <p>
   Contact Ruby on Rails Tutorial about the sample app at the
   <%= link_to "contact page", "http://railstutorial.org/contact" %>
