added debug(params) in the development enviornment and some styling to it. It displays the current controller in use and the action taken

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -110,3 +110,21 @@ footer {
     }
   }
 }
+/* mixins, variables etc. */
+
+$grayMediumLight: #eaeaea;
+
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  /* packed up the above three attributes and named it box_sizing(by the keyword @mixin */
+}
+
+.debug_dump {
+    clear: both;
+    float: right;
+    width: 100%;
+    margin-top: 45px;
+    @include box_sizing;
+    }
