--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -133,9 +133,9 @@ $grayMediumLight: #eaeaea;
 
 aside {
   section {
-    padding: 10px 0;
+    padding: 10px 0 ;
     border-top: 1px solid $grayLighter;
-    &:first_child {
+    &:first-child {
       border: 0;
       padding-top: 0;
     }
