--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,13 @@
 <% provide(:title, @user.name) %>
-<!DOCTYPE html>
-<html>
+<div class = "row">
+  <aside class = "span4">
+    <section>
+        <h1>
+          <%= gravatar_for @user %>
+          <%= @user.name %>
+        </h1>
+    </section>
+  </aside>
+</div>
 
-<%= @user.name %>, <%= @user.email %>
 
-</html>
