--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,24 @@
 <% provide(:title, "Sign Up") %>
 <h1>Sign Up</h1>
-<p>Find me in app/views/users/new.html.erb </p>
+
+<div class = "row">
+  <div class = "span6 offset3">
+    <%= form_for(@user) do |f| %> <!--form_for() takes in an ActiveRecord object
+                                 and construct a form using the object's attr -->
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email %> <!-- for text_field(), the arg has to match the
+                                    attributes of the object -->
+      <%= f.label :password %>
+      <%= f.text_field :password %> 
+      
+      <%= f.label :confirmation %>
+      <%= f.text_field :password_confirmation %>
+      
+      <%= f.submit "Create my account!!!", class: "btn btn-large btn-primary" %> 
+
+    <% end %>
+  </div>
+</div>
