--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,12 +12,12 @@
       <%= f.text_field :email %> <!-- for text_field(), the arg has to match the
                                     attributes of the object -->
       <%= f.label :password %>
-      <%= f.text_field :password %> 
+      <%= f.password_field :password %> 
       
       <%= f.label :confirmation %>
-      <%= f.text_field :password_confirmation %>
+      <%= f.password_field :password_confirmation %>
       
-      <%= f.submit "Create my account!!!", class: "btn btn-large btn-primary" %> 
+      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %> 
 
     <% end %>
   </div>
