--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,6 +5,7 @@
   <div class = "span6 offset3">
     <%= form_for(@user) do |f| %> <!--form_for() takes in an ActiveRecord object
                                  and construct a form using the object's attr -->
+      <%= render 'shared/error_messages' %> 
       <%= f.label :name %>
       <%= f.text_field :name %>
 
@@ -15,7 +16,7 @@
       <%= f.password_field :password %> 
       
       <%= f.label :confirmation %>
-      <%= f.password_field :password_confirmation %>
+      <%= f.password_field :confirmation %>
       
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %> 
 
