added flash(welcome message) after signing up! -> finish user signup

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,8 +15,8 @@
       <%= f.label :password %>
       <%= f.password_field :password %> 
       
-      <%= f.label :confirmation %>
-      <%= f.password_field :confirmation %>
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
       
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %> 
 
