--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,14 @@
 
 <body>
   <%= render('layouts/header') %>
+  
   <div class="container">
     <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
+      <!-- <div class="alert alert-<%= key %>"><%= value %></div>  instead, use -->
+      <%= content_tag(:div, value, class:"alert alert-#{key}") %>
+
     <% end %>
+
     <%= yield %>
     <%= render('layouts/footer') %>
     <%= debug(params) if Rails.env.development? %>
