passed Rspec test for invalid log-in info (with correct error message being displayed -- exactly persists until a 'request' is made

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -11,3 +11,6 @@
     </ul>
   </div>
 <% end %>
+
+<!-- Rails wraps each field(from file where this is rendered)
+with <div class="field_with_errors">...</div> if errors occur --> 
