--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,9 @@
     <%= form_for(@user) do |f| %> <!--form_for() takes in an ActiveRecord object
                                  and construct a form using the object's attr -->
       <%= render 'shared/error_messages' %> 
+      <!-- Rails wraps each field(in this case <label>...</label> and <input />
+      with <div class="field_with_errors">...</div> if errors occur --> 
+ 
       <%= f.label :name %>
       <%= f.text_field :name %>
 
