added create_remember_token and related methods to make it work

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <ul class="pull-right nav">    
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "Help", help_path %></li>
-            <li><%= link_to "Sign in", '#' %></li> <!-- link_to() generates
+            <li><%= link_to "Sign in", signin_path %></li> <!-- link_to() generates
                                                     <a href='#'>Sign in</a> -->
           </ul>
         </nav>   
